crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v119.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 119
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 2
          - secs: 0
            nanos: 22000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 7
          - secs: 0
            nanos: 20000000
        - - 9
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 22000000
  - - MergeCoins
    - observations:
        - - 10
          - secs: 0
            nanos: 53000000
        - - 7
          - secs: 0
            nanos: 69000000
        - - 5
          - secs: 0
            nanos: 55000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 55000000
  - - SplitCoins
    - observations:
        - - 2
          - secs: 0
            nanos: 0
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 54000000
        - - 5
          - secs: 0
            nanos: 24000000
      stake_weighted_median:
        secs: 0
        nanos: 24000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 90000000
        - - 9
          - secs: 0
            nanos: 94000000
        - - 1
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 90000000
  - - Upgrade
    - observations:
        - - 2
          - secs: 0
            nanos: 785000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 785000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 3
          - secs: 0
            nanos: 367000000
        - - 9
          - secs: 0
            nanos: 121000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 367000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 635000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 382000000
  - - transfer_objects_3_items
    - secs: 0
      nanos: 360000000
  - - split_coins_3_amounts
    - secs: 0
      nanos: 96000000
  - - merge_coins_2_sources
    - secs: 0
      nanos: 165000000
  - - make_move_vec_6_elements
    - secs: 0
      nanos: 154000000
  - - mixed_commands
    - secs: 0
      nanos: 319000000
  - - upgrade_package
    - secs: 0
      nanos: 785000000
