crates/sui-core/src/authority/snapshots/sui_core__authority__execution_time_estimator__tests__execution_time_observer_v120.snap
---
source: crates/sui-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 120
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 3
          - secs: 0
            nanos: 16000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 6
          - secs: 0
            nanos: 19000000
        - - 4
          - secs: 0
            nanos: 26000000
      stake_weighted_median:
        secs: 0
        nanos: 26000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 10
          - secs: 0
            nanos: 53000000
        - - 8
          - secs: 0
            nanos: 28000000
      stake_weighted_median:
        secs: 0
        nanos: 53000000
  - - SplitCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 22000000
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 69000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 61000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 5
          - secs: 0
            nanos: 924000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 924000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 9
          - secs: 0
            nanos: 186000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 7
          - secs: 0
            nanos: 261000000
      stake_weighted_median:
        secs: 0
        nanos: 261000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 5
          - secs: 0
            nanos: 282000000
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 56000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 282000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 261000000
  - - mixed_move_calls
    - secs: 0
      nanos: 543000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 282000000
  - - transfer_objects_3_items
    - secs: 0
      nanos: 4000000
  - - split_coins_2_amounts
    - secs: 0
      nanos: 183000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 106000000
  - - make_move_vec_1_elements
    - secs: 0
      nanos: 52000000
  - - mixed_commands
    - secs: 0
      nanos: 126000000
  - - upgrade_package
    - secs: 0
      nanos: 924000000
